<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="wrap_content">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/name_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:maxLength="15"
        android:hint="@string/hint_player_name"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/position_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:maxLines="1"
        android:maxLength="15"
        android:hint="@string/hint_player_position"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/age_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="15"
        android:hint="@string/hint_player_age"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/custom_text"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="number"
        android:maxLines="1"
        android:maxLength="15"
        android:hint="@string/hint_number_of_homeruns"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_button"
        android:id="@+id/save_button"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>